[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wgpu = "24.0.1"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "DomRect",
    "WebGl2RenderingContext",
    "console"
] }
bytemuck = {version = "1.22.0" , features = ["derive"]}



